<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textColor="#AA000000"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textSize="19sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#88000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textSize="16sp"
            android:text="@string/about_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#88000000"/>
        <TextView
            android:textColor="#AA000000"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textSize="19sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#88000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:textSize="16sp"
            android:text="@string/contact_way"
            />
    </LinearLayout>

</ScrollView>